# aicos-pub

./: .gitignore  .public-export-lock.json  CONTRIBUTING.md  GETTING_STARTED.md  INSTALL.md  LICENSE  README.md  SECURITY.md  aicos  nixpacks.toml  pyproject.toml  railway.toml
agent-repo/: README.md
backend/: README.md
brain/shared/: project-registry.md
docs/: aicos-continuation-guide.md  private-source-root-readme.md  public-doc-cleanup-guide.md  role-aware-context-model.md
docs/architecture/: README.md  runtime-agent-identity-boundary.md  runtime-identity-schema.md
docs/concepts/: project-authority-split.md  task-packet-lifecycle.md
docs/deploy/: railway-deploy-log.md  railway-embedding.env.example
docs/guides/: create-your-project.md  mcp-daemon-local-setup.md  role-aware-project-onboarding.md
docs/install/: AICOS_AGENT_INSTALL_QUICKSTART.md  AICOS_FULL_INSTALL_FOR_AGENTS.md  AICOS_MCP_WRITE_COOKBOOK.md  AICOS_PUB_RAILWAY_AGENT_CONNECT.md  AICOS_PUB_RAILWAY_SETUP_RUNBOOK.md  AICOS_QUERY_SEARCH_GUIDE.md  AICOS_VM_AGENT_HTTP_MCP_CONNECT.md
examples/sample-project/: README.md
integrations/: README.md
integrations/local-mcp-bridge/: README.md  aicos_mcp_http_first.py  aicos_mcp_http_stdio_wrapper.py  aicos_mcp_stdio.py
integrations/mcp-daemon/: README.md  aicos_https_proxy.py  (+5 more)
scripts/: aicos  aicos-bootstrap-full  aicos-daemon-start  aicos-daemon-start.sh  aicos-install-launchagents  aicos-railway-apply-embedding-env  aicos-railway-start  aicos-retrieval-eval
serving/: README.md
templates/: scope-layer-note-template.md  task-state-template.md
(+409 files in other folders)
